--- a/style/style.css
+++ b/style/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 .gallery-parent {
-  width: 60rem;
-  height: 4rem;
   margin: 0 auto;
+  width: 40rem;
+  height: 60rem;
 }
 
 .gallery {
@@ -23,5 +23,35 @@ body {
 .pd6-photo {
   height: 20rem;
   position: absolute;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
+.panda {
+  top: 10rem;
+  left: 15%;
+}
+
+.car {
+  top: 2rem;
+  right: 0;
+}
+
+.mustard {
+  top: -2rem;
+  left: 50%;
+}
+
+.pd6-photo:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  outline: 1rem solid #222;
+  z-index: 2;
+}
+
+.gallery:hover .pd6-photo:not(:hover) {
+  -webkit-transform: scale(0.5);
+          transform: scale(0.5);
+  opacity: 0.3;
 }
 /*# sourceMappingURL=style.css.map */
