--- a/style/style.scss
+++ b/style/style.scss
@@ -11,9 +11,10 @@ body{
 
 .gallery-parent{
     //text-align: center;
-    width: 60rem;
-    height: 4rem;
     margin: 0 auto;
+    width: 40rem;
+    height: 60rem;
+   
 }
 
 .gallery{
@@ -23,4 +24,31 @@ body{
 .pd6-photo{
     height:20rem;
     position: absolute;
+    transition: all .3s;
+}
+
+.panda{
+    top:10rem;
+    left: 15%;
+}
+
+.car{
+    top: 2rem;
+    right: 0;
+}
+
+.mustard{
+    top: -2rem;
+    left: 50%;
+}
+
+.pd6-photo:hover{
+    transform: scale(1.3);
+    outline: 1rem solid #222;
+    z-index: 2;
+}
+
+.gallery:hover .pd6-photo:not(:hover){
+transform: scale(.5);
+opacity: (0.3);
 }
