--- a/style/style.scss
+++ b/style/style.scss
@@ -7,6 +7,7 @@ html{
 
 body{
     text-align: center;
+    background-color: tan;
 }
 
 .gallery-parent{
@@ -22,33 +23,44 @@ body{
 }
 
 .pd6-photo{
-    height:20rem;
+    height:40rem;
     position: absolute;
     transition: all .3s;
 }
 
-.panda{
-    top:10rem;
-    left: 15%;
+.fatcat{
+    top:7rem;
+    right: 80%;
 }
 
-.car{
+.kid{
     top: 2rem;
-    right: 0;
+    left: 10%;
+}
+.fatdog{
+    top: 5rem;
+    left: 60%;
 }
 
-.mustard{
-    top: 5rem;
-    left: 40%;
+.whale{
+    top: 35rem;
+    right: 20%;
 }
+
+.pigeon{
+    top: 40rem;
+    left: 50%;
+}
+
+
 
 .pd6-photo:hover{
     transform: scale(1.3);
-    outline: 1rem solid #222;
+    outline: 3px solid #222;
     z-index: 2;
 }
 
 .gallery:hover .pd6-photo:not(:hover){
-transform: scale(.5);
+transform: scale(.4);
 opacity: (0.3);
 }
