--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,8 @@ body {
 .fatdog {
   top: 5rem;
   left: 60%;
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
 }
 
 .whale {
@@ -53,11 +55,26 @@ body {
   left: 50%;
 }
 
-.pd6-photo:hover {
+.fatcat:hover {
+  -webkit-transform: rotate(360deg) scale(1.3);
+          transform: rotate(360deg) scale(1.3);
+  outline: 3px solid #222;
+}
+
+.kid:hover {
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
   outline: 3px solid #222;
-  z-index: 2;
+}
+
+.fatdog:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+  outline: 3px solid #222;
 }
 
 .gallery:hover .pd6-photo:not(:hover) {
