--- a/style/style.scss
+++ b/style/style.scss
@@ -40,6 +40,7 @@ body{
 .fatdog{
     top: 5rem;
     left: 60%;
+    filter: grayscale(100%);
 }
 
 .whale{
@@ -52,12 +53,27 @@ body{
     left: 50%;
 }
 
+//.pd6-photo:hover{
+    //transform: scale(1.3);
+    //outline: 3px solid #222;
+    //z-index: 2;
+//}
 
+.fatcat:hover{
+    transform: rotate(360deg) scale(1.3);
+    outline: 3px solid #222;
+}
 
-.pd6-photo:hover{
+.kid:hover{
     transform: scale(1.3);
     outline: 3px solid #222;
-    z-index: 2;
+}
+
+.fatdog:hover{
+    filter: grayscale(0%);
+    transform: scale(1.1);
+    transition: .3s ease-in-out;
+    outline: 3px solid #222;
 }
 
 .gallery:hover .pd6-photo:not(:hover){
