--- a/style/style.scss
+++ b/style/style.scss
@@ -51,6 +51,7 @@ body{
 .pigeon{
     top: 40rem;
     left: 50%;
+    filter: blur(1rem);
 }
 
 //.pd6-photo:hover{
@@ -65,7 +66,8 @@ body{
 }
 
 .kid:hover{
-    transform: scale(1.3);
+    box-shadow: 2px 3px 5px 10px white;
+    transform: scale(1.1);
     outline: 3px solid #222;
 }
 
@@ -73,6 +75,20 @@ body{
     filter: grayscale(0%);
     transform: scale(1.1);
     transition: .3s ease-in-out;
+    outline: 3px solid #222;
+}
+
+.whale:hover{
+    filter: invert(100%);
+    transition: .3s ease-in-out;
+    transform: scale(1.1);
+    outline: 3px solid #222;
+}
+
+.pigeon:hover{
+    filter: blur(0rem);
+    transform: scale(1.1);
+    transition: .5s ease-in-out;
     outline: 3px solid #222;
 }
 
